# Factory-calibration-DepthAI

./: .gitignore  .gitmodules  HandCalibration.md  LICENSE  README.md  client_starter.py  enable_cm4_oak.py  rc.local  requirements.txt  requirements_cm4.txt  results_cache.jsonl  server.py  set_stat_server_env.sh  setup_arm_node.py  setup_calibration_node.py  test_client.py
calibration/: package.xml
calibration/launch/: depthai_calib.launch
calibration/scripts/: depthai_calibration.py
calibration/scripts/depthai_helpers/: calibration_utils.py
calibration/srv/: Capture.srv
interbotix_moveit_interface/: CMakeLists.txt  package.xml
interbotix_moveit_interface/scripts/: moveit_python_interface
interbotix_ws/src/interbotix_moveit/config/joint_limits/: 6dof_joint_limits.yaml
interbotix_ws/src/interbotix_moveit/launch/: interbotix_moveit.launch  moveit.rviz
interbotix_ws/src/interbotix_moveit_interface/: CMakeLists.txt
interbotix_ws/src/interbotix_moveit_interface/desktop/: arm_control.desktop.in
interbotix_ws/src/interbotix_moveit_interface/launch/: focus_capture.launch  location_capture.launch  moveit_interface.launch
interbotix_ws/src/interbotix_moveit_interface/scripts/: arm_exec.bash.in  focus_capture_moveit  location_capture_moveit  moveit_python_interface
interbotix_ws/src/interbotix_sdk/config/: px100.yaml  px150.yaml  pxxls.yaml  rx150.yaml  rx200.yaml  vx250.yaml  vx300.yaml  vx300s.yaml  vxxmd.yaml  vxxms.yaml  wx200.yaml  wx250.yaml  wx250s.yaml  wxxmd.yaml
interbotix_ws/src/interbotix_sdk/launch/: arm_run.launch
launch/: depthai_calib.launch
python3_ws/src/calibration/: CMakeLists.txt  package.xml  setup.py
python3_ws/src/calibration/launch/: R0M0E0_oak_d_lite_calib.launch  bw1098obc_calib.launch  depthai_calib.launch  depthai_calib_poe.launch  depthai_cm4_calib.launch  dm1092_calib.launch  dm1098OAKD_wifi.launch  dm2cam_calib.launch  oak_1.launch  oak_1_c09.launch  oak_1_calib.launch  oak_1_lite.launch  oak_1_lite_c05.launch  oak_1_lite_w.launch  oak_1_max.launch  oak_1_poe_c10.launch  oak_1_poe_calib.launch  oak_1_w.launch  oak_d.launch  oak_d_calib.launch  oak_d_cm4.launch  oak_d_cm4_poe.launch  oak_d_cm4_poe_c11.launch  oak_d_lite.launch  oak_d_lite_calib.launch  oak_d_poe.launch  oak_d_poe_calib.launch  oak_d_poe_pro_w.launch  oak_d_poe_w.launch  oak_d_pro_calib.launch  oak_d_pro_poe.launch  oak_d_pro_poe_custom.launch  oak_d_pro_w.launch  oak_d_pro_w_custom.launch  oak_d_pro_w_dev.launch  oak_d_pro_w_poe_c01.launch  oak_d_pro_w_poe_custom.launch  oak_d_s2_calib.launch  oak_d_s2_poe.launch  oak_d_sr.launch  (+1 more)
python3_ws/src/calibration/perspective/: image.perspective
python3_ws/src/calibration/scripts/: 1097_socket_read.py  calibration_client.py  depthai_calibration.py  depthai_calibrator.py  depthai_cm4_calibration.py  select_device_ui.py  test-legacy.json  test.json
python3_ws/src/calibration/scripts/consts/: resource_paths.py
python3_ws/src/calibration/scripts/depthai_helpers/: calibration_utils.py  calibration_utils_backup.py  calibration_utils_new.py  production_support_server_api.py  pygame_checkbox.py  stats_server_api.py  update_submodules.py
python3_ws/src/calibration/scripts/resources/batch/: oak_1.json  oak_1_poe.json  oak_d_lite.json  oak_d_poe.json  oak_d_pro.json  oak_d_pro_poe.json  oak_d_s2.json  oak_d_s2_poe.json  oak_d_w_poe.json  oak_ffc_4p.json
python3_ws/src/calibration/scripts/resources/boards/: BW1092.json  BW1097.json  (+16 more)
python3_ws/src/calibration/src/calibration/: select_device_ui.py
scripts/: depthai_calibration.py
(+221 files in other folders)
